# init-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: commands.md  configuration.md  faq.md  getting-started.md  installation.md
link-ai/: README.md  pyproject.toml
link-ak/: README.md  pyproject.toml
src/init-ai/: main.py
src/init-ai/commands/: author.py  hello.py  version.py  who.py
src/init_ai/: __main__.py  cli.py  create.py  main.py  metadata.py
src/init_ai/commands/: author.py  cat.py  config.py  copy.py  create.py  doctor.py  file.py  hello.py  ls.py  mkdir.py  mv.py  pwd.py  rm.py  tree.py  version.py  who.py  write.py
src/init_ai/config/: default.py  loader.py  paths.py  writer.py
