[project]
name = "init-ai"
version = "0.1.0"
description = "AI Engineer Bootstrap CLI"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
creator = "Kunal Pandit"
dependencies = [
    "typer>=0.27.0",
    "tomli-w>=1.2.0"
]

[project.scripts]
init-ai = "init_ai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]

Homepage = "https://github.com/kunal-pandit-ai/init-ai"
Repository = "https://github.com/kunal-pandit-ai/init-ai"
Issues = "https://github.com/kunal-pandit-ai/init-ai/issues"